--- a/vistas/contenido.html
+++ b/vistas/contenido.html
@@ -43,7 +43,7 @@
             </div>
             <div class="col-md-3">
                 <div class="card mt-1">
-      <img src="../assets/Remera1.jpg" class="card-img-top" alt="...">
+      <img src="../assets/remera1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Remeras</h5>
         
